# pdm-update-interactive

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pdm_update_interactive.py  pyproject.toml  setup.cfg
