[metadata]
name = pdm_update_interactive
version = 0.0.2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/q0w/pdm-update-interactive/
author = q0w
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Build Tools

[options]
py_modules = pdm_update_interactive
install_requires =
    pdm>=2
    simple-term-menu>=1.5.2
python_requires = >=3.7

[options.entry_points]
pdm =
    update-interactive = pdm_update_interactive:update_interactive

[mypy]
strict = true
disallow_subclassing_any = false
